--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: python311 # Choose your desired Python version (e.g., python39, python310, python311, python312)
-entrypoint: gunicorn -b :3000 main:app # Tells App Engine how to start your app
+entrypoint: gunicorn -b :$PORT app:app # Tells App Engine how to start your app
 
 # Optional: Instance class (controls resources/cost)
 # instance_class: F1 # F1 is the smallest/cheapest, default is F1
